correct code to avoid null pointer exception